--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -138,7 +138,7 @@
 
                 <button type="submit" 
                         class="w-full bg-intu-blue hover:bg-intu-dark text-white font-black py-4 rounded-2xl shadow-xl shadow-blue-100 transition-all duration-300 transform active:scale-[0.98] flex items-center justify-center gap-3 uppercase tracking-[0.15em] text-xs">
-                    Iniciar Seción <i class="fas fa-arrow-right-to-bracket"></i>
+                    Iniciar Sesión <i class="fas fa-arrow-right-to-bracket"></i>
                 </button>
 
                 {% if form.errors %}
